methods.args.MethodsArgs.scala.code
move(stepCount: Int, goForward: Boolean){
  var Stepcount=getY
  if(GetDirection=NORTH){
    goForward=true;
  }else{
    goForward=false
  }
  if(goForward()==true){
    for(i<-0 to stepCount-1){
      forward()
    }
  }else{
    for(j<-0 to stepCount-1){
      backward()
    }
  }
} 
